# zt-ai-proxy-core

./: .gitignore  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  ZTProxy-Standalone.spec  build_standalone_exe.ps1  environment.py  provider_loader.py  pyproject.toml  setup.cfg  setup.py  zt-proxy 1.py  zt-proxy-8080.pac
browser_extension/: manifest.json  popup.html  popup.js  toast_inject.js
browser_extension/browser_extension/: background.js  popup.html  popup.js  toast_inject.js
cert_installer/cert_installer/: README.md  ZTProxy_Uninstall_Cert.spec  install_cert.spec  install_unified.spec  test_bundled.py  test_bundled.spec  test_installer.ps1  uninstall_cert.spec
config/: blocklist.json
interceptor/: interceptor_addon.py  internal_api.py
interceptor/auth/: session_store.py
interceptor/interfaces/: __init__.py  audit_logger.py  auth_provider.py  config_provider.py  settings_provider.py
interceptor/services/: pii_fast.py  session_manager.py  shadow_ai_detector.py  user_settings.py  zt_log_forwarder.py
interceptor/tools/: config_cache.py  file_store.py  provider_openai.py  request_filters.py  runtime_helpers.py
interceptor/ui/: ui.html
standalone/: __init__.py  audit.py  auth.py  config.py  settings.py
