[project]
name = "zt-proxy"
version = "0.1.0"
description = ""
authors = [
    {name = "Vijay Karavadra",email = "vijay.karavadra@zerotrusted.ai"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai (>=1.98.0,<2.0.0)",
    "mitmproxy (>=12.1.1,<13.0.0)",
    "bs4 (>=0.0.2,<0.0.3)",
    "beautifulsoup4 (>=4.13.4,<5.0.0)",
    "lxml (>=6.0.0,<7.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "requests",
    "aiohttp>=3.9.5",
    "zt-guardrails-lib",
    "redis"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
